--- a/index.html
+++ b/index.html
@@ -4,27 +4,88 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Firebase Login System</title>
+  <style>
+    /* Basic dark theme styling */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #121212;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+    }
+    h1, h2 {
+      text-align: center;
+      color: #f0f0f0;
+    }
+    #auth-section {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      height: 100vh;
+      flex-wrap: wrap;
+      padding: 20px;
+    }
+    form {
+      background-color: #1e1e1e;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      width: 300px;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #444;
+      border-radius: 5px;
+      background-color: #333;
+      color: #fff;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      background-color: #6200ea;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #3700b3;
+    }
+    .toggle-btn {
+      text-align: center;
+      margin-top: 10px;
+      color: #b0b0b0;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
   <h1>Login and Registration</h1>
 
   <div id="auth-section">
-    <h2>Login</h2>
-    <form id="login-form">
-      <input type="email" id="login-email" placeholder="Email" required />
-      <input type="password" id="login-password" placeholder="Password" required />
-      <button type="submit">Login</button>
-    </form>
+    <!-- Login Form -->
+    <div class="form-container">
+      <h2>Login</h2>
+      <form id="login-form">
+        <input type="email" id="login-email" placeholder="Email" required />
+        <input type="password" id="login-password" placeholder="Password" required />
+        <button type="submit">Login</button>
+      </form>
+    </div>
 
-    <h2>Register</h2>
-    <form id="register-form">
-      <input type="email" id="register-email" placeholder="Email" required />
-      <input type="password" id="register-password" placeholder="Password" required />
-      <button type="submit">Register</button>
-    </form>
+    <!-- Register Form -->
+    <div class="form-container">
+      <h2>Register</h2>
+      <form id="register-form">
+        <input type="email" id="register-email" placeholder="Email" required />
+        <input type="password" id="register-password" placeholder="Password" required />
+        <button type="submit">Register</button>
+      </form>
+    </div>
   </div>
 
-  <!-- Firebase SDKs -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
     import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js";
@@ -32,12 +93,13 @@
 
     // Firebase Configuration
     const firebaseConfig = {
-      apiKey: "your-api-key",
-      authDomain: "your-auth-domain",
-      projectId: "your-project-id",
-      storageBucket: "your-storage-bucket",
-      messagingSenderId: "your-messaging-sender-id",
-      appId: "your-app-id",
+      apiKey: "AIzaSyCRKx9cwmDfIplGlZMGOLEJ2FHpr6LLL3E",
+      authDomain: "remark-d4293.firebaseapp.com",
+      projectId: "remark-d4293",
+      storageBucket: "remark-d4293.firebasestorage.app",
+      messagingSenderId: "307655533150",
+      appId: "1:307655533150:web:12bf2f02c5b75384748acf",
+      measurementId: "G-JM3DLTB3BT"
     };
 
     // Initialize Firebase
