--- a/index.html
+++ b/index.html
@@ -1,151 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Firebase Login System</title>
-  <style>
-    /* Basic dark theme styling */
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #121212;
-      color: #fff;
-      margin: 0;
-      padding: 0;
-    }
-    h1, h2 {
-      text-align: center;
-      color: #f0f0f0;
-    }
-    #auth-section {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      height: 100vh;
-      flex-wrap: wrap;
-      padding: 20px;
-    }
-    form {
-      background-color: #1e1e1e;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      width: 300px;
-    }
-    input {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #444;
-      border-radius: 5px;
-      background-color: #333;
-      color: #fff;
-    }
-    button {
-      width: 100%;
-      padding: 10px;
-      background-color: #6200ea;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #3700b3;
-    }
-    .toggle-btn {
-      text-align: center;
-      margin-top: 10px;
-      color: #b0b0b0;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-  <h1>Login and Registration</h1>
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Login page </title>
+      <link rel="stylesheet" href="styles.css">
+  </head>
+  <body style="display:flex; align-items:center; justify-content:center;">
+    <div class="login-page">
+      <div class="form">
+        <!-- Register Form -->
+        <form class="register-form" id="register-form" method="POST">
+          <h2>Register</h2>
+          <input type="text" id="register-name" placeholder="Full Name *" required/>
+          <input type="text" id="register-username" placeholder="Username *" required/>
+          <input type="email" id="register-email" placeholder="Email *" required/>
+          <input type="password" id="register-password" placeholder="Password *" required/>
+          <a class="btn" href="javascript:void(0);" onclick="registerUser()">
+            <span></span><span></span><span></span><span></span>
+            Create
+          </a>
+          <p class="message">Already registered? <a href="javascript:void(0);" onclick="toggleForms('login')">Sign In</a></p>
+          <div class="error-message" id="register-error"></div>
+        </form>
 
-  <div id="auth-section">
-    <!-- Login Form -->
-    <div class="form-container">
-      <h2>Login</h2>
-      <form id="login-form">
-        <input type="email" id="login-email" placeholder="Email" required />
-        <input type="password" id="login-password" placeholder="Password" required />
-        <button type="submit">Login</button>
-      </form>
+        <!-- Login Form -->
+        <form class="login-form" id="login-form" method="POST" style="display: none;">
+          <h2>Login</h2>
+          <input type="text" id="login-username" placeholder="Username" required />
+          <input type="password" id="login-password" placeholder="Password" required/>
+          <a class="btn" href="javascript:void(0);" onclick="loginUser()">
+            <span></span><span></span><span></span><span></span>
+            Sign In
+          </a>
+          <p class="message">Not registered? <a href="javascript:void(0);" onclick="toggleForms('register')">Create an account</a></p>
+          <div class="error-message" id="login-error"></div>
+        </form>
+      </div>
     </div>
 
-    <!-- Register Form -->
-    <div class="form-container">
-      <h2>Register</h2>
-      <form id="register-form">
-        <input type="email" id="register-email" placeholder="Email" required />
-        <input type="password" id="register-password" placeholder="Password" required />
-        <button type="submit">Register</button>
-      </form>
-    </div>
-  </div>
+    <!-- Firebase SDKs -->
+    <script type="module">
+      // Import Firebase SDKs
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
+      import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js";
+      import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js";
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js";
-    import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js";
+      // Firebase Configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyCRKx9cwmDfIplGlZMGOLEJ2FHpr6LLL3E",
+        authDomain: "remark-d4293.firebaseapp.com",
+        projectId: "remark-d4293",
+        storageBucket: "remark-d4293.firebasestorage.app",
+        messagingSenderId: "307655533150",
+        appId: "1:307655533150:web:12bf2f02c5b75384748acf",
+        measurementId: "G-JM3DLTB3BT"
+      };
 
-    // Firebase Configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCRKx9cwmDfIplGlZMGOLEJ2FHpr6LLL3E",
-      authDomain: "remark-d4293.firebaseapp.com",
-      projectId: "remark-d4293",
-      storageBucket: "remark-d4293.firebasestorage.app",
-      messagingSenderId: "307655533150",
-      appId: "1:307655533150:web:12bf2f02c5b75384748acf",
-      measurementId: "G-JM3DLTB3BT"
-    };
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const auth = getAuth(app);
+      const db = getFirestore(app);
 
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
-
-    // Register a new user
-    document.getElementById("register-form").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const email = document.getElementById("register-email").value;
-      const password = document.getElementById("register-password").value;
-
-      try {
-        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
-        const user = userCredential.user;
-        console.log("User registered:", user);
-
-        // Save user data in Firestore
-        await setDoc(doc(db, "users", user.uid), {
-          email: user.email,
-          createdAt: new Date(),
-        });
-        alert("User registered successfully!");
-      } catch (error) {
-        console.error("Error registering user:", error);
-        alert("Error: " + error.message);
+      // Toggle between login and register forms
+      function toggleForms(form) {
+        if (form === 'login') {
+          document.getElementById('login-form').style.display = 'block';
+          document.getElementById('register-form').style.display = 'none';
+        } else {
+          document.getElementById('login-form').style.display = 'none';
+          document.getElementById('register-form').style.display = 'block';
+        }
       }
-    });
 
-    // Login an existing user
-    document.getElementById("login-form").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const email = document.getElementById("login-email").value;
-      const password = document.getElementById("login-password").value;
+      // Register a new user
+      async function registerUser() {
+        const name = document.getElementById("register-name").value;
+        const username = document.getElementById("register-username").value;
+        const email = document.getElementById("register-email").value;
+        const password = document.getElementById("register-password").value;
 
-      try {
-        const userCredential = await signInWithEmailAndPassword(auth, email, password);
-        const user = userCredential.user;
-        console.log("User logged in:", user);
-        alert("User logged in successfully!");
-      } catch (error) {
-        console.error("Error logging in user:", error);
-        alert("Error: " + error.message);
+        try {
+          const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+          const user = userCredential.user;
+
+          // Save user data in Firestore
+          await setDoc(doc(db, "users", user.uid), {
+            name: name,
+            username: username,
+            email: user.email,
+            createdAt: new Date(),
+          });
+
+          alert("User registered successfully!");
+          toggleForms('login');
+        } catch (error) {
+          document.getElementById('register-error').innerText = error.message;
+        }
       }
-    });
-  </script>
-</body>
+
+      // Login an existing user
+      async function loginUser() {
+        const email = document.getElementById("login-username").value;
+        const password = document.getElementById("login-password").value;
+
+        try {
+          const userCredential = await signInWithEmailAndPassword(auth, email, password);
+          const user = userCredential.user;
+          alert("User logged in successfully!");
+          // Redirect to a new page after successful login
+          window.location.href = "https://ram2020-art.github.io/NokiaRouter/";
+        } catch (error) {
+          document.getElementById('login-error').innerText = error.message;
+        }
+      }
+    </script>
+  </body>
 </html>
