--- a/index.html
+++ b/index.html
@@ -1,121 +1,270 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Register Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        @import url(https://fonts.googleapis.com/css?family=Poppins:300);
+        html {
+            height: 100%;
+        }
+        body{
+            margin:0;
+            padding:0;
+            font-family: sans-serif;
+            background: linear-gradient(#30142b, #2772a1);
+        }
+        .login-page {
+            width: 400px;
+            padding: 8% 0 0;
+            margin: auto;
+        }
+        .form {
+            position: relative;
+            z-index: 1;
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 400px;
+            padding: 40px;
+            transform: translate(-50%, -50%);
+            background: rgba(0,0,0,.5);
+            box-sizing: border-box;
+            box-shadow: 0 15px 25px rgba(0,0,0,.6);
+            border-radius: 10px;
+        }
+        .form input {
+            width: 100%;
+            padding: 10px 0;
+            font-size: 13px;
+            color: #fff;
+            margin-bottom: 30px;
+            border: none;
+            border-bottom: 1px solid #fff;
+            outline: none;
+            background: transparent;
+        }
+        h2 {
+            color: white;
+        }
+        .form .message {
+            margin: 15px 0 0;
+            color: #b3b3b3;
+            font-size: 12px;
+        }
+        .form .message a {
+            color: #289bb8;
+            text-decoration: none;
+        }
+        .form .register-form {
+            display: none;
+        }
+        .btn {
+            position: relative;
+            display: inline-block;
+            padding: 10px 20px;
+            color: #289bb8;
+            font-size: 16px;
+            text-decoration: none;
+            overflow: hidden;
+            transition: .5s;
+            margin-top: 15px;
+            letter-spacing: 2px
+        }
+        .btn:hover {
+            background: #289bb8;
+            color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 5px #289bb8,
+                        0 0 25px #289bb8,
+                        0 0 50px #289bb8,
+                        0 0 100px #289bb8;
+        }
+        .btn span {
+            position: absolute;
+            display: block;
+        }
+        .btn span:nth-child(1) {
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 2px;
+            background: linear-gradient(90deg, transparent, #289bb8);
+            animation: btn-anim1 1s linear infinite;
+        }
+        @keyframes btn-anim1 {
+            0% {
+                left: -100%;
+            }
+            50%,100% {
+                left: 100%;
+            }
+        }
+        .btn span:nth-child(2) {
+            top: -100%;
+            right: 0;
+            width: 2px;
+            height: 100%;
+            background: linear-gradient(180deg, transparent, #289bb8);
+            animation: btn-anim2 1s linear infinite;
+            animation-delay: .25s
+        }
+        @keyframes btn-anim2 {
+            0% {
+                top: -100%;
+            }
+            50%,100% {
+                top: 100%;
+            }
+        }
+        .btn span:nth-child(3) {
+            bottom: 0;
+            right: -100%;
+            width: 100%;
+            height: 2px;
+            background: linear-gradient(270deg, transparent, #289bb8);
+            animation: btn-anim3 1s linear infinite;
+            animation-delay: .5s
+        }
+        @keyframes btn-anim3 {
+            0% {
+                right: -100%;
+            }
+            50%,100% {
+                right: 100%;
+            }
+        }
+        .btn span:nth-child(4) {
+            bottom: -100%;
+            left: 0;
+            width: 2px;
+            height: 100%;
+            background: linear-gradient(360deg, transparent, #289bb8);
+            animation: btn-anim4 1s linear infinite;
+            animation-delay: .75s
+        }
+        @keyframes btn-anim4 {
+            0% {
+                bottom: -100%;
+            }
+            50%,100% {
+                bottom: 100%;
+            }
+        }
+    </style>
 </head>
-<body style="display:flex; align-items:center; justify-content:center; height:100vh; background-color: #333; color: white;">
-
-  <div class="login-page">
-    <div class="form">
-      <!-- Register Form -->
-      <form class="register-form" id="register-form" method="POST">
-        <h2>Register</h2>
-        <input type="text" id="register-name" placeholder="Full Name *" required/>
-        <input type="text" id="register-username" placeholder="Username *" required/>
-        <input type="email" id="register-email" placeholder="Email *" required/>
-        <input type="password" id="register-password" placeholder="Password *" required/>
-        <button type="submit">Create Account</button>
-        <p class="message">Already registered? <a href="#">Sign In</a></p>
-      </form>
-
-      <!-- Login Form -->
-      <form class="login-form" id="login-form" method="POST" style="display:none;">
-        <h2>Login</h2>
-        <input type="text" id="login-username" placeholder="Username" required/>
-        <input type="password" id="login-password" placeholder="Password" required/>
-        <button type="submit">Sign In</button>
-        <p class="message">Not registered? <a href="#">Create an account</a></p>
-      </form>
+<body style="display:flex; align-items:center; justify-content:center;">
+    <div class="login-page">
+        <div class="form">
+            <form class="register-form" id="register-form" method="POST">
+                <h2>Register</h2>
+                <input type="text" id="register-name" placeholder="Full Name *" required/>
+                <input type="text" id="register-username" placeholder="Username *" required/>
+                <input type="email" id="register-email" placeholder="Email *" required/>
+                <input type="password" id="register-password" placeholder="Password *" required/>
+                <a class="btn" href="#" onclick="registerUser()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    Create
+                </a>
+                <p class="message">Already registered? <a href="#" onclick="toggleForms()">Sign In</a></p>
+            </form>
+            <form class="login-form" id="login-form" method="POST">
+                <h2>Login</h2>
+                <input type="text" id="login-username" placeholder="Username" required />
+                <input type="password" id="login-password" placeholder="Password" required/>
+                <a class="btn" href="#" onclick="loginUser()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    Sign in
+                </a>
+                <p class="message">Not registered? <a href="#" onclick="toggleForms()">Create an account</a></p>
+            </form>
+        </div>
     </div>
-  </div>
 
-  <!-- Firebase SDKs -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js";
-    import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js";
+    <!-- Firebase SDKs -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
+        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js";
+        import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js";
 
-    // Firebase Configuration (Use your real API Key and Credentials)
-    const firebaseConfig = {
-      apiKey: "AIzaSyCRKx9cwmDfIplGlZMGOLEJ2FHpr6LLL3E",
-      authDomain: "remark-d4293.firebaseapp.com",
-      projectId: "remark-d4293",
-      storageBucket: "remark-d4293.firebasestorage.app",
-      messagingSenderId: "307655533150",
-      appId: "1:307655533150:web:12bf2f02c5b75384748acf",
-      measurementId: "G-JM3DLTB3BT"
-    };
+        const firebaseConfig = {
+            apiKey: "AIzaSyCRKx9cwmDfIplGlZMGOLEJ2FHpr6LLL3E",
+            authDomain: "remark-d4293.firebaseapp.com",
+            projectId: "remark-d4293",
+            storageBucket: "remark-d4293.firebasestorage.app",
+            messagingSenderId: "307655533150",
+            appId: "1:307655533150:web:12bf2f02c5b75384748acf",
+            measurementId: "G-JM3DLTB3BT"
+        };
 
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const db = getFirestore(app);
 
-    // Switch to Register Form
-    document.querySelector('.message a').addEventListener('click', (event) => {
-      event.preventDefault();
-      document.querySelector('.register-form').style.display = 'block';
-      document.querySelector('.login-form').style.display = 'none';
-    });
+        // Toggle between login and register forms
+        function toggleForms() {
+            const registerForm = document.querySelector('.register-form');
+            const loginForm = document.querySelector('.login-form');
+            registerForm.style.display = registerForm.style.display === 'none' ? 'block' : 'none';
+            loginForm.style.display = loginForm.style.display === 'none' ? 'block' : 'none';
+        }
 
-    // Switch to Login Form
-    document.querySelector('.message a').addEventListener('click', (event) => {
-      event.preventDefault();
-      document.querySelector('.login-form').style.display = 'block';
-      document.querySelector('.register-form').style.display = 'none';
-    });
+        // Register user
+        async function registerUser() {
+            const name = document.getElementById("register-name").value;
+            const username = document.getElementById("register-username").value;
+            const email = document.getElementById("register-email").value;
+            const password = document.getElementById("register-password").value;
 
-    // Register User
-    document.getElementById('register-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const name = document.getElementById("register-name").value;
-      const username = document.getElementById("register-username").value;
-      const email = document.getElementById("register-email").value;
-      const password = document.getElementById("register-password").value;
+            try {
+                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+                const user = userCredential.user;
 
-      try {
-        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
-        const user = userCredential.user;
+                await setDoc(doc(db, "users", user.uid), {
+                    name,
+                    username,
+                    email,
+                    createdAt: new Date(),
+                });
 
-        // Save user data to Firestore
-        await setDoc(doc(db, "users", user.uid), {
-          name,
-          username,
-          email,
-          createdAt: new Date(),
+                alert("User registered successfully!");
+                window.location.href = "https://ram2020-art.github.io/NokiaRouter/";
+            } catch (error) {
+                console.error("Error registering user:", error);
+                alert("Error: " + error.message);
+            }
+        }
+
+        // Login user
+        async function loginUser() {
+            const email = document.getElementById("login-username").value;
+            const password = document.getElementById("login-password").value;
+
+            try {
+                const userCredential = await signInWithEmailAndPassword(auth, email, password);
+                const user = userCredential.user;
+                alert("User logged in successfully!");
+                window.location.href = "https://ram2020-art.github.io/NokiaRouter/";
+            } catch (error) {
+                console.error("Error logging in user:", error);
+                alert("Error: " + error.message);
+            }
+        }
+    </script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $('.message a').click(function() {
+            $('form').animate({ height: "toggle", opacity: "toggle" }, "slow");
         });
-
-        alert("User registered successfully!");
-        // Redirect to NokiaRouter page
-        window.location.href = "https://ram2020-art.github.io/NokiaRouter/";
-      } catch (error) {
-        console.error("Error registering user:", error);
-        alert("Error: " + error.message);
-      }
-    });
-
-    // Login User
-    document.getElementById('login-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const email = document.getElementById("login-username").value;
-      const password = document.getElementById("login-password").value;
-
-      try {
-        const userCredential = await signInWithEmailAndPassword(auth, email, password);
-        const user = userCredential.user;
-        alert("User logged in successfully!");
-
-        // Redirect to NokiaRouter page
-        window.location.href = "https://ram2020-art.github.io/NokiaRouter/";
-      } catch (error) {
-        console.error("Error logging in user:", error);
-        alert("Error: " + error.message);
-      }
-    });
-  </script>
+    </script>
 </body>
 </html>
